// Copyright 2023 The Elastic-AI Authors.
// part of Elastic AI Search
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//


syntax="proto2";
import "melon/proto/rpc/options.proto";

package melon;

message RpcDumpMeta {
  // melon_std, hulu_pbrpc
  optional string service_name = 1;

  // melon_std(full_method_name)
  optional string method_name = 2;

  // hulu_pbrpc
  optional int32 method_index = 3;

  // melon_std, hulu_pbrpc
  optional CompressType compress_type = 4;
  optional ProtocolType protocol_type = 5;

  // melon_std, hulu_pbrpc
  optional int32 attachment_size = 6;

  // melon_std
  optional bytes authentication_data = 7;

  // hulu_pbrpc
  optional bytes user_data = 8;
}
